chore(css): overflow fix

--- a/src/app.css
+++ b/src/app.css
@@ -152,7 +152,7 @@
 .team-column {
     position: sticky;
     top: 24px;
-    background: linear-gradient(180deg, rgb(255 102 102 / 92%) 0 15%, rgb(255 255 255 / 94%) 15% 100%);
+    background: linear-gradient(180deg, rgb(255 102 102 / 92%) 0 15%, rgb(255 255 255 / 94%) 15% 100%) no-repeat;
     padding: 1rem;
     display: flex;
     flex-direction: column;
